# serializer version: 1
# name: test_examples[basic_client-example_base_url]
  '''
  
  # running: example_base_url
  {'status': 200, 'body': 'foobar'}
  
  '''
# ---
# name: test_examples[basic_client-example_error_for_status]
  '''
  
  # running: example_error_for_status
  {'error': "('HTTP status client error', {'status': 400})"}
  {'status': 400}
  
  '''
# ---
# name: test_examples[basic_client-example_headers]
  '''
  
  # running: example_headers
  {'x_client': ['client_value'], 'x_req': ['req_value'], 'x_req2': ['req2_value'], 'user_agent': ['ua-example/1.0']}
  
  '''
# ---
# name: test_examples[basic_client-example_read_bytes]
  '''
  
  # running: example_read_bytes
  {'status': 200, 'body': Bytes(b"\xfa\x12\xf9*\xfb\xe0\x0f\x85\x08\xd0\xe8;\xab\x9c\xf8\xce")}
  
  '''
# ---
# name: test_examples[basic_client-example_read_text]
  '''
  
  # running: example_read_text
  {'status': 200, 'text': '<h1>Unicode Demo</h1>'}
  
  '''
# ---
# name: test_examples[basic_client-example_simple_get]
  '''
  
  # running: example_simple_get
  {'args': {'q': ['pyreqwest']}, 'url': 'http://localhost:<PORT>/get?q=pyreqwest', 'status': 200}
  
  '''
# ---
# name: test_examples[basic_client-example_simple_get_sync]
  '''
  
  # running: example_simple_get_sync
  {'args': {'q': ['pyreqwest']}, 'url': 'http://localhost:<PORT>/get?q=pyreqwest'}
  
  '''
# ---
# name: test_examples[basic_client-example_stream_download]
  '''
  
  # running: example_stream_download
  {'chunks': 5, 'total_bytes': 500}
  
  '''
# ---
# name: test_examples[basic_client-example_stream_upload]
  '''
  
  # running: example_stream_upload
  {'status': 200, 'data': 'data:application/octet-stream;base64,cGFydC0wX3BhcnQtMV9wYXJ0LTJfcGFydC0zX3BhcnQtNF8='}
  
  '''
# ---
# name: test_examples[basic_client-example_timeouts]
  '''
  
  # running: example_timeouts
  {'error': "('connection timeout', {'causes': [{'message': 'error sending request for url (http://localhost:<PORT>/delay/2)'}, {'message': 'operation timed out'}]})"}
  
  '''
# ---
# name: test_examples[basic_client-example_url_usage]
  '''
  
  # running: example_url_usage
  {'args': {'q': ['pyreqwest']}, 'url': 'http://localhost:<PORT>/get?q=pyreqwest'}
  
  '''
# ---
# name: test_examples[json_usage-example_custom_json_dumps]
  '''
  
  # running: example_custom_json_dumps
  {'status': 200, 'json': {'value': 'Zm9v'}}
  
  '''
# ---
# name: test_examples[json_usage-example_custom_json_loads]
  '''
  
  # running: example_custom_json_loads
  {'status': 200, 'json': {'value': b'foo'}}
  
  '''
# ---
# name: test_examples[json_usage-example_post_json]
  '''
  
  # running: example_post_json
  {'status': 200, 'echo': {'message': 'hello'}, 'content_type': ['application/json']}
  
  '''
# ---
# name: test_examples[middleware-example_extensions]
  '''
  
  # running: example_extensions
  {'mws': [['init'], ['init_mw1']], 'extensions': {'demo_ext': 'init_mw1_mw2'}}
  
  '''
# ---
# name: test_examples[middleware-example_middleware_modify_request_body]
  '''
  
  # running: example_middleware_modify_request_body
  {'data': 'data:application/octet-stream;base64,aGVsbG9fd29ybGQ='}
  
  '''
# ---
# name: test_examples[middleware-example_middleware_modify_request_body_streamed]
  '''
  
  # running: example_middleware_modify_request_body_streamed
  {'data': 'data:application/octet-stream;base64,aGVsbG9fd29ybGRfbWlkZGxld2FyZQ=='}
  
  '''
# ---
# name: test_examples[middleware-example_middleware_override_response_builder]
  '''
  
  # running: example_middleware_override_response_builder
  {'status': 202, 'body': 'overridden'}
  
  '''
# ---
# name: test_examples[middleware-example_middleware_request_specific]
  '''
  
  # running: example_middleware_request_specific
  {'req1_args': {'mw1': ['val1'], 'mw2': ['val2']}, 'req2_args': {'mw1': ['val1']}}
  
  '''
# ---
# name: test_examples[middleware-example_multiple]
  '''
  
  # running: example_multiple
  {'order': [['1'], ['2']]}
  
  '''
# ---
# name: test_examples[middleware-example_retry_middleware]
  '''
  
  # running: example_retry_middleware
  {'url': 'http://localhost:<PORT>/delay/0', 'status': 200, 'retried': True}
  
  '''
# ---
# name: test_examples[middleware-example_simple]
  '''
  
  # running: example_simple
  {'request_header': ['val1'], 'response_header': 'val2'}
  
  '''
# ---
